Run and fix bug on mobile

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -9,6 +9,7 @@
     }
     .contact-form .form-control {
         padding: 15px;
+        font-size: 16px;
     }
     .social-list{
         font-size: 48px;
@@ -28,6 +29,9 @@
     }
     .contact-form{
         margin-top: 32px;
+    }
+    .contact-btn-sunmit {
+        font-size: 16px;
     }
 }
 /* Tablet */
